--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,15 +5,15 @@
 # Description: Arduino CMake example                                          #
 #                                                                             #
 #=============================================================================#
-set(CMAKE_MODULE_PATH    ${CMAKE_SOURCE_DIR}/cmake/modules)  # CMake module search path
-set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/toolchains/Arduino.cmake) # Arduino Toolchain
+set(CMAKE_MODULE_PATH    ${CMAKE_SOURCE_DIR}/cmake/modules)
+set(CMAKE_TOOLCHAIN_FILE ${CMAKE_SOURCE_DIR}/cmake/toolchains/Arduino.cmake)
 
 
 cmake_minimum_required(VERSION 2.8)
 #====================================================================#
 #  Setup Project                                                     #
 #====================================================================#
-project(ArduinoExample C CXX)
+project(DHT11 C CXX)
 find_package(Arduino 22 REQUIRED)
 
-add_subdirectory(example)  # Add example directory to build
+add_subdirectory(src)
