--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ cmake_minimum_required(VERSION 2.8)
 #====================================================================#
 #  Setup Project                                                     #
 #====================================================================#
-project(DHT11 C CXX)
+project(DHT C CXX)
 find_package(Arduino 22 REQUIRED)
 
+include_directories(lib)
+add_subdirectory(lib/dht)
 add_subdirectory(src)
