--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 
-set(FIRMWARE_NAME dht11)
+set(FIRMWARE_NAME example)
 
 set(${FIRMWARE_NAME}_BOARD uno)
 set(${FIRMWARE_NAME}_SRCS main.cpp)
+set(${FIRMWARE_NAME}_LIBS dht)
 
 set(${FIRMWARE_NAME}_PORT /dev/ttyACM0)
 set(${FIRMWARE_NAME}_SERIAL picocom @INPUT_PORT@ -b 9600 -l )
